Add script to detect false positive IOCs

--- a/false_positive_iocs.ipynb
+++ b/false_positive_iocs.ipynb
@@ -2,25 +2,65 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "id": "ca9a1a08-9615-4789-bec4-63313506baba",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import boto3\n",
+    "from botocore.exceptions import ClientError\n",
+    "from collections import defaultdict\n",
+    "import csv\n",
+    "import json\n",
     "import ollama\n",
-    "from pydantic import BaseModel"
+    "import os\n",
+    "from pathlib import Path\n",
+    "from pydantic import BaseModel\n",
+    "import sqlite3\n",
+    "import tldextract"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
+   "id": "4a5195ac-160f-4e17-b757-bbf4a37e2edd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2025-03-10 21:34:28--  http://s3-us-west-1.amazonaws.com/umbrella-static/top-1m.csv.zip\n",
+      "16.15.4.148, 52.219.220.128, 52.219.112.144, ...-1.amazonaws.com)... \n",
+      "connected. to s3-us-west-1.amazonaws.com (s3-us-west-1.amazonaws.com)|16.15.4.148|:80... \n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 12395958 (12M) [application/zip]\n",
+      "Saving to: ‘top-1m.csv.zip’\n",
+      "\n",
+      "top-1m.csv.zip      100%[===================>]  11.82M  7.03MB/s    in 1.7s    \n",
+      "\n",
+      "2025-03-10 21:34:30 (7.03 MB/s) - ‘top-1m.csv.zip’ saved [12395958/12395958]\n",
+      "\n",
+      "Archive:  top-1m.csv.zip\n",
+      "  inflating: top-1m.csv              \n"
+     ]
+    }
+   ],
+   "source": [
+    "!wget -nc http://s3-us-west-1.amazonaws.com/umbrella-static/top-1m.csv.zip\n",
+    "!unzip -o top-1m.csv.zip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "355f0764-5c0e-4135-9a04-76afb054bc23",
    "metadata": {},
    "outputs": [],
    "source": [
     "def ioc_validation_prompt(ioc, ioc_type, context):\n",
     "    return f\"\"\"\n",
-    "    Based on the following text, answer \"true\" or \"false\". Is {ioc} an {ioc_type}?\n",
+    "    Based on the following text, is {ioc} an {ioc_type}? Answer \"true\" or \"false\", with a single sentence reason.\n",
     "\n",
     "    -----------\n",
     "    {context}\n",
@@ -28,7 +68,7 @@
     "\n",
     "def ioc_relevance_prompt(ioc, ioc_type, context):\n",
     "    return f\"\"\"\n",
-    "    Based on the following text, answer \"true\" or \"false\". Is the {ioc_type} {ioc} an indicator of compromise?\n",
+    "    Based on the following text, is the {ioc_type} {ioc} an indicator of compromise? Answer \"true\" or \"false\", with a single sentence reason.\n",
     "\n",
     "    -----------\n",
     "    {context}\n",
@@ -37,57 +77,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "id": "0b0f66eb-1b92-4e94-84b4-ef3d4c85a115",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Answer(BaseModel):\n",
-    "    answer: bool"
+    "    answer: bool\n",
+    "    reason: str"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "be7a2d1e-6ad0-4a21-bc06-862c305ac32b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "resp = ollama.chat(\n",
-    "    model='qwen2.5:14b',\n",
-    "    messages=[\n",
-    "        {\n",
-    "            'role': 'user',\n",
-    "            'content': ioc_validation_prompt(ioc, \"URL\", context),\n",
-    "        },\n",
-    "    ],\n",
-    "    format=Answer.model_json_schema(),\n",
-    ")\n",
-    "answer = Answer.model_validate_json(resp.message.content)\n",
-    "answer"
+    "def is_valid_ioc(ioc, ioc_type, context):\n",
+    "    resp = ollama.chat(\n",
+    "        model='qwen2.5:14b',\n",
+    "        messages=[\n",
+    "            {\n",
+    "                'role': 'user',\n",
+    "                'content': ioc_validation_prompt(ioc, ioc_type, context),\n",
+    "            },\n",
+    "        ],\n",
+    "        format=Answer.model_json_schema(),\n",
+    "    )\n",
+    "    answer = Answer.model_validate_json(resp.message.content)\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "776c07ed-6c36-492a-91e4-0b37bab9960b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_relevant_ioc(ioc, ioc_type, context):\n",
+    "    resp = ollama.chat(\n",
+    "        model='qwen2.5:14b',\n",
+    "        messages=[\n",
+    "            {\n",
+    "                'role': 'user',\n",
+    "                'content': ioc_relevance_prompt(ioc, ioc_type, context),\n",
+    "            },\n",
+    "        ],\n",
+    "        format=Answer.model_json_schema(),\n",
+    "    )\n",
+    "    answer = Answer.model_validate_json(resp.message.content)\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "79b628e1-cf76-485e-9d99-9308f81712d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def top_domains():\n",
+    "    res = set()\n",
+    "    with open('top-1m.csv') as f:\n",
+    "        csvreader = csv.reader(f)\n",
+    "        for num, domain in csvreader:\n",
+    "            num = int(num)\n",
+    "            res.add(domain)\n",
+    "\n",
+    "    return res\n",
+    "\n",
+    "def extract_tld_plus_one(url):\n",
+    "    ext = tldextract.extract(url)\n",
+    "    tld_plus_one = f\"{ext.domain}.{ext.suffix}\"\n",
+    "    return tld_plus_one\n",
+    "\n",
+    "common_domains = top_domains()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "2a222323-6e56-4750-a287-ba4e8d019b6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def context(ioc, body):\n",
+    "    try:\n",
+    "        idx = body.index(ioc)\n",
+    "        return body[idx-1000:idx+len(ioc)+1000]\n",
+    "    except:\n",
+    "        return body\n",
+    "\n",
+    "def split(iocs):\n",
+    "    return iocs.split(\",\") if iocs else []\n",
+    "\n",
+    "def update_false_positives():\n",
+    "    # Connect to sqlite database\n",
+    "    sq_conn = sqlite3.connect(\"reports.db\")\n",
+    "    \n",
+    "    # Initialize database\n",
+    "    with open(\"sqlite_schema.sql\") as f:\n",
+    "        try:\n",
+    "            with sq_conn:\n",
+    "                sq_conn.executescript(f.read())\n",
+    "        except Exception as e:\n",
+    "            print(f\"error applying schema: {e}\")\n",
+    "    \n",
+    "    with sq_conn, open(\"sqlite_schema.sql\") as f:\n",
+    "        try:\n",
+    "            sq_conn.executescript(f.read())\n",
+    "        except Exception as e:\n",
+    "            print(f\"error applying schema: {e}\")\n",
+    "    \n",
+    "        read_cur = sq_conn.cursor()\n",
+    "        update_cur = sq_conn.cursor()\n",
+    "    \n",
+    "        count = 0\n",
+    "        for row in read_cur.execute(\"SELECT id, source, ipv4s, ipv6s, urls FROM report\"):\n",
+    "            report_id, source, ipv4s, ipv6s, urls = row\n",
+    "            \n",
+    "            pagepath = os.path.join(\"parseddata\", source, f\"{report_id}.txt\")\n",
+    "            if os.path.exists(pagepath):\n",
+    "                invalid_iocs = dict()\n",
+    "                irrelevant_iocs = dict()\n",
+    "                \n",
+    "                body = open(pagepath).read()\n",
+    "    \n",
+    "                print(row)\n",
+    "    \n",
+    "                for ipv4 in split(ipv4s):\n",
+    "                    ctx = context(ipv4, body)\n",
+    "                    answer = is_valid_ioc(ipv4, \"IPv4 Address\", ctx)\n",
+    "                    if not answer.answer:\n",
+    "                        invalid_iocs[ipv4] = answer.reason\n",
+    "    \n",
+    "                for ipv6 in split(ipv6s):\n",
+    "                    ctx = context(ipv6, body)\n",
+    "                    answer = is_valid_ioc(ipv6, \"IPv6 Address\", ctx)\n",
+    "                    if not answer.answer:\n",
+    "                        invalid_iocs[ipv6] = answer.reason\n",
+    "    \n",
+    "                for url in split(urls):\n",
+    "                    tldp1 = extract_tld_plus_one(url)\n",
+    "    \n",
+    "                    # Skip common domains\n",
+    "                    if tldp1 in common_domains:\n",
+    "                        irrelevant_iocs[url] = \"Common domain\"\n",
+    "                        continue\n",
+    "                    \n",
+    "                    ctx = context(url, body)\n",
+    "                    ip_answer = is_valid_ioc(url, \"IP Address\", ctx)\n",
+    "                    domain_answer = is_valid_ioc(url, \"Domain\", ctx)\n",
+    "                    if not (ip_answer.answer or domain_answer.answer):\n",
+    "                        if not ip_answer.answer:\n",
+    "                            invalid_iocs[url] = ip_answer.reason\n",
+    "                        if not domain_answer.answer:\n",
+    "                            invalid_iocs[url] = domain_answer.reason\n",
+    "    \n",
+    "                update_cur.execute(\"\"\"\n",
+    "                    UPDATE report SET\n",
+    "                        ai_invalid_iocs = ?,\n",
+    "                        ai_irrelevant_iocs = ?\n",
+    "                    WHERE id = ?\n",
+    "                \"\"\", (json.dumps(invalid_iocs),\n",
+    "                      json.dumps(irrelevant_iocs),\n",
+    "                      report_id,))\n",
+    "                if update_cur.rowcount != 1:\n",
+    "                    raise Exception(f\"update_cur.rowcount = {update_cur.rowcount}\")\n",
+    "    \n",
+    "                count += 1\n",
+    "                print(f\"Updated report {report_id} ({count})\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "776c07ed-6c36-492a-91e4-0b37bab9960b",
+   "id": "16bff118-9819-44ed-95d5-ad8e1f30d4cd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "resp = ollama.chat(\n",
-    "    model='qwen2.5:14b',\n",
-    "    messages=[\n",
-    "        {\n",
-    "            'role': 'user',\n",
-    "            'content': ioc_relevance_prompt(ioc, \"URL\", context),\n",
-    "        },\n",
-    "    ],\n",
-    "    format=Answer.model_json_schema(),\n",
-    ")\n",
-    "answer = Answer.model_validate_json(resp.message.content)\n",
-    "answer"
+    "if __name__ == '__main__':\n",
+    "    update_false_positives()"
    ]
   }
  ],
