--- a/false_positive_iocs.ipynb
+++ b/false_positive_iocs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "ca9a1a08-9615-4789-bec4-63313506baba",
    "metadata": {},
    "outputs": [],
@@ -22,30 +22,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "4a5195ac-160f-4e17-b757-bbf4a37e2edd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2025-03-10 21:34:28--  http://s3-us-west-1.amazonaws.com/umbrella-static/top-1m.csv.zip\n",
-      "16.15.4.148, 52.219.220.128, 52.219.112.144, ...-1.amazonaws.com)... \n",
-      "connected. to s3-us-west-1.amazonaws.com (s3-us-west-1.amazonaws.com)|16.15.4.148|:80... \n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 12395958 (12M) [application/zip]\n",
-      "Saving to: ‘top-1m.csv.zip’\n",
-      "\n",
-      "top-1m.csv.zip      100%[===================>]  11.82M  7.03MB/s    in 1.7s    \n",
-      "\n",
-      "2025-03-10 21:34:30 (7.03 MB/s) - ‘top-1m.csv.zip’ saved [12395958/12395958]\n",
-      "\n",
-      "Archive:  top-1m.csv.zip\n",
-      "  inflating: top-1m.csv              \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!wget -nc http://s3-us-west-1.amazonaws.com/umbrella-static/top-1m.csv.zip\n",
     "!unzip -o top-1m.csv.zip"
@@ -53,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "355f0764-5c0e-4135-9a04-76afb054bc23",
    "metadata": {},
    "outputs": [],
@@ -77,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "0b0f66eb-1b92-4e94-84b4-ef3d4c85a115",
    "metadata": {},
    "outputs": [],
@@ -89,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "be7a2d1e-6ad0-4a21-bc06-862c305ac32b",
    "metadata": {},
    "outputs": [],
@@ -111,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "776c07ed-6c36-492a-91e4-0b37bab9960b",
    "metadata": {},
    "outputs": [],
@@ -133,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "79b628e1-cf76-485e-9d99-9308f81712d8",
    "metadata": {},
    "outputs": [],
@@ -158,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "2a222323-6e56-4750-a287-ba4e8d019b6a",
    "metadata": {},
    "outputs": [],
@@ -173,67 +153,57 @@
     "def split(iocs):\n",
     "    return iocs.split(\",\") if iocs else []\n",
     "\n",
-    "def update_false_positives():\n",
-    "    # Connect to sqlite database\n",
-    "    sq_conn = sqlite3.connect(\"reports.db\")\n",
-    "    \n",
-    "    # Initialize database\n",
-    "    with open(\"sqlite_schema.sql\") as f:\n",
-    "        try:\n",
-    "            with sq_conn:\n",
-    "                sq_conn.executescript(f.read())\n",
-    "        except Exception as e:\n",
-    "            print(f\"error applying schema: {e}\")\n",
-    "    \n",
+    "def update_false_positives(sq_conn):\n",
     "    with sq_conn, open(\"sqlite_schema.sql\") as f:\n",
     "        try:\n",
     "            sq_conn.executescript(f.read())\n",
     "        except Exception as e:\n",
     "            print(f\"error applying schema: {e}\")\n",
     "    \n",
-    "        read_cur = sq_conn.cursor()\n",
-    "        update_cur = sq_conn.cursor()\n",
-    "    \n",
-    "        count = 0\n",
-    "        for row in read_cur.execute(\"SELECT id, source, ipv4s, ipv6s, urls FROM report\"):\n",
-    "            report_id, source, ipv4s, ipv6s, urls = row\n",
+    "    read_cur = sq_conn.cursor()\n",
+    "    update_cur = sq_conn.cursor()\n",
+    "\n",
+    "    count = 0\n",
+    "    for row in read_cur.execute(\"SELECT id, source, ipv4s, ipv6s, urls FROM report\"):\n",
+    "        report_id, source, ipv4s, ipv6s, urls = row\n",
+    "        \n",
+    "        pagepath = os.path.join(\"parseddata\", source, f\"{report_id}.txt\")\n",
+    "        if os.path.exists(pagepath):\n",
+    "            invalid_iocs = dict()\n",
+    "            irrelevant_iocs = dict()\n",
     "            \n",
-    "            pagepath = os.path.join(\"parseddata\", source, f\"{report_id}.txt\")\n",
-    "            if os.path.exists(pagepath):\n",
-    "                invalid_iocs = dict()\n",
-    "                irrelevant_iocs = dict()\n",
+    "            body = open(pagepath).read()\n",
+    "\n",
+    "            for ipv4 in split(ipv4s):\n",
+    "                ctx = context(ipv4, body)\n",
+    "                answer = is_valid_ioc(ipv4, \"IPv4 Address\", ctx)\n",
+    "                if not answer.answer:\n",
+    "                    invalid_iocs[ipv4] = answer.reason\n",
+    "\n",
+    "            for ipv6 in split(ipv6s):\n",
+    "                ctx = context(ipv6, body)\n",
+    "                answer = is_valid_ioc(ipv6, \"IPv6 Address\", ctx)\n",
+    "                if not answer.answer:\n",
+    "                    invalid_iocs[ipv6] = answer.reason\n",
+    "\n",
+    "            for url in split(urls):\n",
+    "                tldp1 = extract_tld_plus_one(url)\n",
+    "\n",
+    "                # Skip common domains\n",
+    "                if tldp1 in common_domains:\n",
+    "                    irrelevant_iocs[url] = \"Common domain\"\n",
+    "                    continue\n",
     "                \n",
-    "                body = open(pagepath).read()\n",
-    "    \n",
-    "                for ipv4 in split(ipv4s):\n",
-    "                    ctx = context(ipv4, body)\n",
-    "                    answer = is_valid_ioc(ipv4, \"IPv4 Address\", ctx)\n",
-    "                    if not answer.answer:\n",
-    "                        invalid_iocs[ipv4] = answer.reason\n",
-    "    \n",
-    "                for ipv6 in split(ipv6s):\n",
-    "                    ctx = context(ipv6, body)\n",
-    "                    answer = is_valid_ioc(ipv6, \"IPv6 Address\", ctx)\n",
-    "                    if not answer.answer:\n",
-    "                        invalid_iocs[ipv6] = answer.reason\n",
-    "    \n",
-    "                for url in split(urls):\n",
-    "                    tldp1 = extract_tld_plus_one(url)\n",
-    "    \n",
-    "                    # Skip common domains\n",
-    "                    if tldp1 in common_domains:\n",
-    "                        irrelevant_iocs[url] = \"Common domain\"\n",
-    "                        continue\n",
-    "                    \n",
-    "                    ctx = context(url, body)\n",
-    "                    ip_answer = is_valid_ioc(url, \"IP Address\", ctx)\n",
-    "                    domain_answer = is_valid_ioc(url, \"Domain\", ctx)\n",
-    "                    if not (ip_answer.answer or domain_answer.answer):\n",
-    "                        if not ip_answer.answer:\n",
-    "                            invalid_iocs[url] = ip_answer.reason\n",
-    "                        if not domain_answer.answer:\n",
-    "                            invalid_iocs[url] = domain_answer.reason\n",
-    "    \n",
+    "                ctx = context(url, body)\n",
+    "                ip_answer = is_valid_ioc(url, \"IP Address\", ctx)\n",
+    "                domain_answer = is_valid_ioc(url, \"Domain\", ctx)\n",
+    "                if not (ip_answer.answer or domain_answer.answer):\n",
+    "                    if not ip_answer.answer:\n",
+    "                        invalid_iocs[url] = ip_answer.reason\n",
+    "                    if not domain_answer.answer:\n",
+    "                        invalid_iocs[url] = domain_answer.reason\n",
+    "\n",
+    "            with sq_conn:\n",
     "                update_cur.execute(\"\"\"\n",
     "                    UPDATE report SET\n",
     "                        ai_invalid_iocs = ?,\n",
@@ -242,11 +212,12 @@
     "                \"\"\", (json.dumps(invalid_iocs),\n",
     "                      json.dumps(irrelevant_iocs),\n",
     "                      report_id,))\n",
-    "                if update_cur.rowcount != 1:\n",
-    "                    raise Exception(f\"update_cur.rowcount = {update_cur.rowcount}\")\n",
-    "    \n",
-    "                count += 1\n",
-    "                print(f\"Updated report {report_id} ({count})\")"
+    "                \n",
+    "            if update_cur.rowcount != 1:\n",
+    "                raise Exception(f\"update_cur.rowcount = {update_cur.rowcount}\")\n",
+    "\n",
+    "            count += 1\n",
+    "            print(f\"Updated report {report_id} ({count})\")"
    ]
   },
   {
@@ -257,7 +228,12 @@
    "outputs": [],
    "source": [
     "if __name__ == '__main__':\n",
-    "    update_false_positives()"
+    "    # Connect to sqlite database\n",
+    "    sq_conn = sqlite3.connect(\"reports.db\")\n",
+    "    try:\n",
+    "        update_false_positives(sq_conn)\n",
+    "    finally:\n",
+    "        sq_conn.close()"
    ]
   }
  ],
