--- a/false_positive_iocs.ipynb
+++ b/false_positive_iocs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ca9a1a08-9615-4789-bec4-63313506baba",
    "metadata": {},
    "outputs": [],
@@ -22,10 +22,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4a5195ac-160f-4e17-b757-bbf4a37e2edd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File ‘top-1m.csv.zip’ already there; not retrieving.\n",
+      "\n",
+      "Archive:  top-1m.csv.zip\n",
+      "  inflating: top-1m.csv              \n"
+     ]
+    }
+   ],
    "source": [
     "!wget -nc http://s3-us-west-1.amazonaws.com/umbrella-static/top-1m.csv.zip\n",
     "!unzip -o top-1m.csv.zip"
@@ -33,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "355f0764-5c0e-4135-9a04-76afb054bc23",
    "metadata": {},
    "outputs": [],
@@ -57,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0b0f66eb-1b92-4e94-84b4-ef3d4c85a115",
    "metadata": {},
    "outputs": [],
@@ -69,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "be7a2d1e-6ad0-4a21-bc06-862c305ac32b",
    "metadata": {},
    "outputs": [],
@@ -91,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "776c07ed-6c36-492a-91e4-0b37bab9960b",
    "metadata": {},
    "outputs": [],
@@ -113,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "79b628e1-cf76-485e-9d99-9308f81712d8",
    "metadata": {},
    "outputs": [],
@@ -138,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "2a222323-6e56-4750-a287-ba4e8d019b6a",
    "metadata": {},
    "outputs": [],
@@ -164,8 +175,13 @@
     "    update_cur = sq_conn.cursor()\n",
     "\n",
     "    count = 0\n",
-    "    for row in read_cur.execute(\"SELECT id, source, ipv4s, ipv6s, urls FROM report\"):\n",
-    "        report_id, source, ipv4s, ipv6s, urls = row\n",
+    "    for row in read_cur.execute(\"SELECT id, source, ipv4s, ipv6s, urls, ai_invalid_iocs, ai_irrelevant_iocs FROM report\"):\n",
+    "        report_id, source, ipv4s, ipv6s, urls, ai_invalid_iocs, ai_irrelevant_iocs = row\n",
+    "\n",
+    "        if ai_invalid_iocs != \"\" and ai_irrelevant_iocs != \"\":\n",
+    "            count += 1\n",
+    "            print(f\"Skipping report {report_id} {count}\")\n",
+    "            continue\n",
     "        \n",
     "        pagepath = os.path.join(\"parseddata\", source, f\"{report_id}.txt\")\n",
     "        if os.path.exists(pagepath):\n",
